--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.70.5",
     "react-native-axios": "^0.17.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal-datetime-picker": "^14.0.0",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
